# mcs_mw_lf

./: .gitignore  LICENSE  README.md  hit_rate_comparison.py  individual_analysis.py  jitter.py  lf_analysis.bash  lf_build.bash  lf_composer.py  lf_config.yaml  sync_jitter.py
include/MotionTrackingArena/: CaptureNode.h  MainScheduler.h  MotionTrackingArena.h
share/reactor-cpp-default/cmake/: reactor-cpp-defaultConfig-debug.cmake  reactor-cpp-defaultConfig.cmake
src/: Blink.lf  CMakeLists.txt  CaptureNode.lf  GPIO.cmake  MainScheduler.lf  MotionTrackingArena.lf  OpenCV.cmake  capture.cpp  capture.h  deploy_node.bash  gpio_blink.c  gpio_blink.h
